[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "swing-mcp"
version = "2.0.0"
description = "SwingMCP — 옵션 스윙 트레이딩 자동화 MCP 서버"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "core*", "orchestrator*", "servers*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=shared",
    "--cov=core",
    "--cov=orchestrator",
    "--cov=servers",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=90",
    "-v",
]

[tool.coverage.run]
source = ["shared", "core", "orchestrator", "servers"]
omit = ["tests/*", "scripts/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
